# x_trends_agent_LangGraph

./: .gitignore  README.md  pyproject.toml
src/beeai_agents/: agent.py
