[project]
name = "langgraph-agents"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "agentstack-sdk==0.4.0rc1",
    "beeai_framework>=0.1.68",
    "ddgs>=9.10.0",
    "google-adk>=1.24.1",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.8",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[project.scripts]
server = "langgraph_agents.agent:run"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
